--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^2.6.5",
+    "firebase": "^7.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
