--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^2.6.5",
     "firebase": "^7.2.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
