--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
